assignment 3/mad_parser.output
Terminals unused in grammar

   TERMINAL
   VALUE


State 15 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 76 conflicts: 3 shift/reduce
State 95 conflicts: 3 shift/reduce
State 96 conflicts: 3 shift/reduce
State 100 conflicts: 3 shift/reduce
State 114 conflicts: 3 shift/reduce
State 115 conflicts: 3 shift/reduce
State 116 conflicts: 3 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce


Grammar

    0 $accept: mad_program NONTERMINAL

    1 mad_program: supported_declarations
    2            | supported_declarations mad_program
    3            | error '\n'

    4 supported_declarations: variable_declarations
    5                       | function_declarations

    6 variable_declarations: variable_definitions SEMI
    7                      | variable_definitions error

    8 variable_definitions: dtype ID
    9                     | variable_definitions COMMA ID
   10                     | variable_definitions error ID '\n'

   11 dtype: DTYPE_INT
   12      | DTYPE_BOOL
   13      | error

   14 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN statement_block
   15                      | VOID ID OPENPAREN argument_list CLOSEPAREN statement_block

   16 argument_list: dtype ID COMMA argument_list
   17              | dtype ID
   18              | %empty
   19              | dtype ID error argument_list
   20              | dtype error COMMA argument_list

   21 statement_block: OPENCURLY variable_list statement_list CLOSECURLY
   22                | OPENCURLY variable_list statement_list error

   23 variable_list: %empty
   24              | variable_declarations variable_list

   25 statement_list: %empty
   26               | supported_statement statement_list

   27 supported_statement: alr_subexpression SEMI
   28                    | if_statement
   29                    | while_statement
   30                    | for_statement
   31                    | return_statement
   32                    | print_statement
   33                    | statement_block
   34                    | alr_subexpression error

   35 if_statement: IF OPENPAREN alr_subexpression CLOSEPAREN statement_block else_statement

   36 else_statement: %empty
   37               | ELSE supported_statement

   38 while_statement: WHILE OPENPAREN alr_subexpression CLOSEPAREN

   39 for_statement: FOR OPENPAREN alr_subexpression SEMI alr_subexpression SEMI alr_subexpression CLOSEPAREN statement_block
   40              | FOR OPENPAREN alr_subexpression error alr_subexpression SEMI alr_subexpression CLOSEPAREN statement_block
   41              | FOR OPENPAREN alr_subexpression SEMI alr_subexpression error alr_subexpression CLOSEPAREN statement_block
   42              | FOR OPENPAREN alr_subexpression SEMI alr_subexpression SEMI alr_subexpression error statement_block

   43 return_statement: RETURN SEMI
   44                 | RETURN alr_subexpression SEMI
   45                 | RETURN error
   46                 | RETURN alr_subexpression error

   47 print_statement: PRINT OPENPAREN alr_subexpression CLOSEPAREN SEMI
   48                | PRINT error alr_subexpression CLOSEPAREN SEMI
   49                | PRINT OPENPAREN alr_subexpression error SEMI
   50                | PRINT OPENPAREN alr_subexpression CLOSEPAREN error

   51 alr_subexpression: ID EQ alr_subexpression
   52                  | supported_constant
   53                  | ID
   54                  | ID OPENPAREN id_list CLOSEPAREN
   55                  | OPENPAREN alr_subexpression CLOSEPAREN
   56                  | alr_subexpression ARITH alr_subexpression
   57                  | OPENNEGATE alr_subexpression CLOSEPAREN
   58                  | alr_subexpression RELN alr_subexpression
   59                  | alr_subexpression LOGICAL alr_subexpression
   60                  | LOGICALNOT alr_subexpression
   61                  | READ OPENPAREN CLOSEPAREN
   62                  | error EQ alr_subexpression
   63                  | ID error alr_subexpression
   64                  | ID OPENPAREN id_list error
   65                  | READ OPENPAREN error
   66                  | READ error CLOSEPAREN

   67 id_list: ID COMMA id_list
   68        | ID
   69        | %empty
   70        | error COMMA id_list

   71 supported_constant: INTCONST
   72                   | BOOLCONST
   73                   | OPENNEGATE INTCONST CLOSEPAREN


Terminals, with rules where they appear

NONTERMINAL (0) 0
TERMINAL (1)
VALUE (2)
'\n' (10) 3 10
error (256) 3 7 10 13 19 20 22 34 40 41 42 45 46 48 49 50 62 63 64
    65 66 70
ID (258) 8 9 10 14 15 16 17 19 51 53 54 63 64 67 68
COMMA (259) 9 16 20 67 70
SEMI (260) 6 27 39 40 41 42 43 44 47 48 49
OPENPAREN (261) 14 15 35 38 39 40 41 42 47 49 50 54 55 61 64 65
CLOSEPAREN (262) 14 15 35 38 39 40 41 47 48 50 54 55 57 61 66 73
OPENCURLY (263) 21 22
CLOSECURLY (264) 21
OPENNEGATE (265) 57 73
VOID (266) 15
DTYPE_INT (267) 11
DTYPE_BOOL (268) 12
EQ (269) 51 62
ARITH (270) 56
RELN (271) 58
LOGICAL (272) 59
LOGICALNOT (273) 60
IF (274) 35
ELSE (275) 37
WHILE (276) 38
FOR (277) 39 40 41 42
RETURN (278) 43 44 45 46
PRINT (279) 47 48 49 50
READ (280) 61 65 66
BOOLCONST (281) 72
INTCONST (282) 71 73


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
mad_program (32)
    on left: 1 2 3, on right: 0 2
supported_declarations (33)
    on left: 4 5, on right: 1 2
variable_declarations (34)
    on left: 6 7, on right: 4 24
variable_definitions (35)
    on left: 8 9 10, on right: 6 7 9 10
dtype (36)
    on left: 11 12 13, on right: 8 14 16 17 19 20
function_declarations (37)
    on left: 14 15, on right: 5
argument_list (38)
    on left: 16 17 18 19 20, on right: 14 15 16 19 20
statement_block (39)
    on left: 21 22, on right: 14 15 33 35 39 40 41 42
variable_list (40)
    on left: 23 24, on right: 21 22 24
statement_list (41)
    on left: 25 26, on right: 21 22 26
supported_statement (42)
    on left: 27 28 29 30 31 32 33 34, on right: 26 37
if_statement (43)
    on left: 35, on right: 28
else_statement (44)
    on left: 36 37, on right: 35
while_statement (45)
    on left: 38, on right: 29
for_statement (46)
    on left: 39 40 41 42, on right: 30
return_statement (47)
    on left: 43 44 45 46, on right: 31
print_statement (48)
    on left: 47 48 49 50, on right: 32
alr_subexpression (49)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right:
    27 34 35 38 39 40 41 42 44 46 47 48 49 50 51 55 56 57 58 59 60
    62 63
id_list (50)
    on left: 67 68 69 70, on right: 54 64 67 70
supported_constant (51)
    on left: 71 72 73, on right: 52


State 0

    0 $accept: . mad_program NONTERMINAL

    error       shift, and go to state 1
    VOID        shift, and go to state 2
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    mad_program             go to state 5
    supported_declarations  go to state 6
    variable_declarations   go to state 7
    variable_definitions    go to state 8
    dtype                   go to state 9
    function_declarations   go to state 10


State 1

    3 mad_program: error . '\n'
   13 dtype: error .

    '\n'  shift, and go to state 11

    $default  reduce using rule 13 (dtype)


State 2

   15 function_declarations: VOID . ID OPENPAREN argument_list CLOSEPAREN statement_block

    ID  shift, and go to state 12


State 3

   11 dtype: DTYPE_INT .

    $default  reduce using rule 11 (dtype)


State 4

   12 dtype: DTYPE_BOOL .

    $default  reduce using rule 12 (dtype)


State 5

    0 $accept: mad_program . NONTERMINAL

    NONTERMINAL  shift, and go to state 13


State 6

    1 mad_program: supported_declarations .
    2            | supported_declarations . mad_program

    error       shift, and go to state 1
    VOID        shift, and go to state 2
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    NONTERMINAL  reduce using rule 1 (mad_program)

    mad_program             go to state 14
    supported_declarations  go to state 6
    variable_declarations   go to state 7
    variable_definitions    go to state 8
    dtype                   go to state 9
    function_declarations   go to state 10


State 7

    4 supported_declarations: variable_declarations .

    $default  reduce using rule 4 (supported_declarations)


State 8

    6 variable_declarations: variable_definitions . SEMI
    7                      | variable_definitions . error
    9 variable_definitions: variable_definitions . COMMA ID
   10                     | variable_definitions . error ID '\n'

    error  shift, and go to state 15
    COMMA  shift, and go to state 16
    SEMI   shift, and go to state 17


State 9

    8 variable_definitions: dtype . ID
   14 function_declarations: dtype . ID OPENPAREN argument_list CLOSEPAREN statement_block

    ID  shift, and go to state 18


State 10

    5 supported_declarations: function_declarations .

    $default  reduce using rule 5 (supported_declarations)


State 11

    3 mad_program: error '\n' .

    $default  reduce using rule 3 (mad_program)


State 12

   15 function_declarations: VOID ID . OPENPAREN argument_list CLOSEPAREN statement_block

    OPENPAREN  shift, and go to state 19


State 13

    0 $accept: mad_program NONTERMINAL .

    $default  accept


State 14

    2 mad_program: supported_declarations mad_program .

    $default  reduce using rule 2 (mad_program)


State 15

    7 variable_declarations: variable_definitions error .
   10 variable_definitions: variable_definitions error . ID '\n'

    ID  shift, and go to state 20

    ID        [reduce using rule 7 (variable_declarations)]
    $default  reduce using rule 7 (variable_declarations)


State 16

    9 variable_definitions: variable_definitions COMMA . ID

    ID  shift, and go to state 21


State 17

    6 variable_declarations: variable_definitions SEMI .

    $default  reduce using rule 6 (variable_declarations)


State 18

    8 variable_definitions: dtype ID .
   14 function_declarations: dtype ID . OPENPAREN argument_list CLOSEPAREN statement_block

    OPENPAREN  shift, and go to state 22

    $default  reduce using rule 8 (variable_definitions)


State 19

   15 function_declarations: VOID ID OPENPAREN . argument_list CLOSEPAREN statement_block

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    CLOSEPAREN  reduce using rule 18 (argument_list)

    dtype          go to state 24
    argument_list  go to state 25


State 20

   10 variable_definitions: variable_definitions error ID . '\n'

    '\n'  shift, and go to state 26


State 21

    9 variable_definitions: variable_definitions COMMA ID .

    $default  reduce using rule 9 (variable_definitions)


State 22

   14 function_declarations: dtype ID OPENPAREN . argument_list CLOSEPAREN statement_block

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    CLOSEPAREN  reduce using rule 18 (argument_list)

    dtype          go to state 24
    argument_list  go to state 27


State 23

   13 dtype: error .

    $default  reduce using rule 13 (dtype)


State 24

   16 argument_list: dtype . ID COMMA argument_list
   17              | dtype . ID
   19              | dtype . ID error argument_list
   20              | dtype . error COMMA argument_list

    error  shift, and go to state 28
    ID     shift, and go to state 29


State 25

   15 function_declarations: VOID ID OPENPAREN argument_list . CLOSEPAREN statement_block

    CLOSEPAREN  shift, and go to state 30


State 26

   10 variable_definitions: variable_definitions error ID '\n' .

    $default  reduce using rule 10 (variable_definitions)


State 27

   14 function_declarations: dtype ID OPENPAREN argument_list . CLOSEPAREN statement_block

    CLOSEPAREN  shift, and go to state 31


State 28

   20 argument_list: dtype error . COMMA argument_list

    COMMA  shift, and go to state 32


State 29

   16 argument_list: dtype ID . COMMA argument_list
   17              | dtype ID .
   19              | dtype ID . error argument_list

    error  shift, and go to state 33
    COMMA  shift, and go to state 34

    CLOSEPAREN  reduce using rule 17 (argument_list)


State 30

   15 function_declarations: VOID ID OPENPAREN argument_list CLOSEPAREN . statement_block

    OPENCURLY  shift, and go to state 35

    statement_block  go to state 36


State 31

   14 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN . statement_block

    OPENCURLY  shift, and go to state 35

    statement_block  go to state 37


State 32

   20 argument_list: dtype error COMMA . argument_list

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    CLOSEPAREN  reduce using rule 18 (argument_list)

    dtype          go to state 24
    argument_list  go to state 38


State 33

   19 argument_list: dtype ID error . argument_list

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    CLOSEPAREN  reduce using rule 18 (argument_list)

    dtype          go to state 24
    argument_list  go to state 39


State 34

   16 argument_list: dtype ID COMMA . argument_list

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    CLOSEPAREN  reduce using rule 18 (argument_list)

    dtype          go to state 24
    argument_list  go to state 40


State 35

   21 statement_block: OPENCURLY . variable_list statement_list CLOSECURLY
   22                | OPENCURLY . variable_list statement_list error

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    error       [reduce using rule 23 (variable_list)]
    ID          reduce using rule 23 (variable_list)
    OPENPAREN   reduce using rule 23 (variable_list)
    OPENCURLY   reduce using rule 23 (variable_list)
    CLOSECURLY  reduce using rule 23 (variable_list)
    OPENNEGATE  reduce using rule 23 (variable_list)
    LOGICALNOT  reduce using rule 23 (variable_list)
    IF          reduce using rule 23 (variable_list)
    WHILE       reduce using rule 23 (variable_list)
    FOR         reduce using rule 23 (variable_list)
    RETURN      reduce using rule 23 (variable_list)
    PRINT       reduce using rule 23 (variable_list)
    READ        reduce using rule 23 (variable_list)
    BOOLCONST   reduce using rule 23 (variable_list)
    INTCONST    reduce using rule 23 (variable_list)

    variable_declarations  go to state 41
    variable_definitions   go to state 8
    dtype                  go to state 42
    variable_list          go to state 43


State 36

   15 function_declarations: VOID ID OPENPAREN argument_list CLOSEPAREN statement_block .

    $default  reduce using rule 15 (function_declarations)


State 37

   14 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN statement_block .

    $default  reduce using rule 14 (function_declarations)


State 38

   20 argument_list: dtype error COMMA argument_list .

    $default  reduce using rule 20 (argument_list)


State 39

   19 argument_list: dtype ID error argument_list .

    $default  reduce using rule 19 (argument_list)


State 40

   16 argument_list: dtype ID COMMA argument_list .

    $default  reduce using rule 16 (argument_list)


State 41

   24 variable_list: variable_declarations . variable_list

    error       shift, and go to state 23
    DTYPE_INT   shift, and go to state 3
    DTYPE_BOOL  shift, and go to state 4

    error       [reduce using rule 23 (variable_list)]
    ID          reduce using rule 23 (variable_list)
    OPENPAREN   reduce using rule 23 (variable_list)
    OPENCURLY   reduce using rule 23 (variable_list)
    CLOSECURLY  reduce using rule 23 (variable_list)
    OPENNEGATE  reduce using rule 23 (variable_list)
    LOGICALNOT  reduce using rule 23 (variable_list)
    IF          reduce using rule 23 (variable_list)
    WHILE       reduce using rule 23 (variable_list)
    FOR         reduce using rule 23 (variable_list)
    RETURN      reduce using rule 23 (variable_list)
    PRINT       reduce using rule 23 (variable_list)
    READ        reduce using rule 23 (variable_list)
    BOOLCONST   reduce using rule 23 (variable_list)
    INTCONST    reduce using rule 23 (variable_list)

    variable_declarations  go to state 41
    variable_definitions   go to state 8
    dtype                  go to state 42
    variable_list          go to state 44


State 42

    8 variable_definitions: dtype . ID

    ID  shift, and go to state 45


State 43

   21 statement_block: OPENCURLY variable_list . statement_list CLOSECURLY
   22                | OPENCURLY variable_list . statement_list error

    error       shift, and go to state 46
    ID          shift, and go to state 47
    OPENPAREN   shift, and go to state 48
    OPENCURLY   shift, and go to state 35
    OPENNEGATE  shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    IF          shift, and go to state 51
    WHILE       shift, and go to state 52
    FOR         shift, and go to state 53
    RETURN      shift, and go to state 54
    PRINT       shift, and go to state 55
    READ        shift, and go to state 56
    BOOLCONST   shift, and go to state 57
    INTCONST    shift, and go to state 58

    error       [reduce using rule 25 (statement_list)]
    CLOSECURLY  reduce using rule 25 (statement_list)

    statement_block      go to state 59
    statement_list       go to state 60
    supported_statement  go to state 61
    if_statement         go to state 62
    while_statement      go to state 63
    for_statement        go to state 64
    return_statement     go to state 65
    print_statement      go to state 66
    alr_subexpression    go to state 67
    supported_constant   go to state 68


State 44

   24 variable_list: variable_declarations variable_list .

    $default  reduce using rule 24 (variable_list)


State 45

    8 variable_definitions: dtype ID .

    $default  reduce using rule 8 (variable_definitions)


State 46

   62 alr_subexpression: error . EQ alr_subexpression

    EQ  shift, and go to state 69


State 47

   51 alr_subexpression: ID . EQ alr_subexpression
   53                  | ID .
   54                  | ID . OPENPAREN id_list CLOSEPAREN
   63                  | ID . error alr_subexpression
   64                  | ID . OPENPAREN id_list error

    error      shift, and go to state 70
    OPENPAREN  shift, and go to state 71
    EQ         shift, and go to state 72

    error       [reduce using rule 53 (alr_subexpression)]
    SEMI        reduce using rule 53 (alr_subexpression)
    CLOSEPAREN  reduce using rule 53 (alr_subexpression)
    ARITH       reduce using rule 53 (alr_subexpression)
    RELN        reduce using rule 53 (alr_subexpression)
    LOGICAL     reduce using rule 53 (alr_subexpression)


State 48

   55 alr_subexpression: OPENPAREN . alr_subexpression CLOSEPAREN

    error       shift, and go to state 46
    ID          shift, and go to state 47
    OPENPAREN   shift, and go to state 48
    OPENNEGATE  shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    READ        shift, and go to state 56
    BOOLCONST   shift, and go to state 57
    INTCONST    shift, and go to state 58

    alr_subexpression   go to state 73
    supported_constant  go to state 68


State 49

   57 alr_subexpression: OPENNEGATE . alr_subexpression CLOSEPAREN
   73 supported_constant: OPENNEGATE . INTCONST CLOSEPAREN
